@@ -13,10 +13,18 @@
     "core=dynamic_x86" or "core=dynamic_rec" for either
     the dynamic_x86 core or the dynamic_rec core. Also
     thank joncampbell123 for the 64-bit fix. (Wengier)
+  - You can now use your own save file (in addition to
+    save slots! There are now a "Use save file" toggle
+    item and "Browse save file..." for browsing save
+    files on your computer. A new menu item "Display
+    state information" is added as well to display the
+    information of the saved state. (Wengier)
   - Save state feature now allows users to optionally
-    enter remarks when saving a state. A toggle menu
-    item "No remark when saving state" (in "Capture")
-    is added to disable input of remarks. (Wengier)
+    enter remarks when saving a state. A submenu group
+    "Save/load option" is added (under "Capture") where
+    you can toggle menu items "No remark when saving
+    state" (for disabling input of remarks when saving)
+    and "force load state mode". (Wengier)
   - DOSBox-X will now use native dialog box to display
     quit warnings and save state errors. (Wengier)
   - Updated the Windows installer to default to the
